5/10/2024 - Añadido CHANGELOG y descripcion en la carpeta recien creada company_hierarchy
          - Editado el comando clean en Makefile para que funcione en Windows y Linux
          - Cambiada la extension de los archivos main.c y empresa.c a .cpp. En Windows, los archivos .c no pueden compilarse a C++.
            Tambien se cambiaron las extensiones en Makefile a .cpp
          - Se tradujo todo a español
            Agregado empleados.h y empleados.cpp con las funciones que manipulan personas
            De empresa.cpp y empresa.h se eliminaron esas mismas funciones
            Se definieron tres estructuras sencillas: Empresa, Cargo, Persona
            Agregado: CrearOrg esta implementado

6/10/204 - Agregado: AsignarPersona()
            Funciones de ayuda: CopiarString(), ifPersonaExisteCargo(), ListarPersonaSimple()
            Nombre a cargo

10/10/2024  -Agregado: empleados.cpp, empleados.h, cargo.cpp, cargo.h
              Se desplazaron funciones para coincidir con estos nuevos modulos
            -Agregado: Ahora nodo_cargo tiene los parametros para construir un arbol
            -Agregado: el nodo_persona, con cedula y nombre, reemplazo al nodo empleado. El nodo_empleado contiene el nodo_persona
            -Eliminado: se eliminaro funciones que no se iban a poder usar sin mayores cambios con las nuevas struct